cluster/apps/media/sabnzbd/networkpolicies/sabnzbd.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
  namespace: media
spec:
  description: "Policy for sabnzbd"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            "k8s:io.kubernetes.pod.namespace": media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: ${USENET_PROVIDER_DOMAIN}
      toPorts:
        - ports:
            - port: "563"
              protocol: TCP
    - toFQDNs: # curl/jq
        - matchName: dl-cdn.alpinelinux.org
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toFQDNs:
        - matchName: ${USENET_INDEXER_DOMAIN}
        - matchName: api.github.com
        - matchName: auth.docker.io
        - matchName: codeload.github.com
        - matchName: files.pythonhosted.org
        - matchName: ghcr.io # catppuccin theme
        - matchName: hooks.slack.com
        - matchName: pkg-containers.githubusercontent.com # catppuccin theme
        - matchName: production.cloudflare.docker.com
        - matchName: pypi.org
        - matchName: raw.githubusercontent.com
        - matchName: raw.githubusercontent.com # catppuccin theme
        - matchName: registry-1.docker.io
        - matchName: self-test.sabnzbd.org
        - matchPattern: docker-images-prod.*.r2.cloudflarestorage.com # docker images
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
